--- a/src/App.module.css
+++ b/src/App.module.css
@@ -15,3 +15,12 @@
   padding: 26px 16px 0;
   background: #f0f0f0;
 }
+
+.logo {
+  max-width: 30%;
+  max-height: 30%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 25px;
+}
