--- a/src/App.module.css
+++ b/src/App.module.css
@@ -24,3 +24,26 @@
   margin-right: auto;
   padding-bottom: 25px;
 }
+
+.tableContainer {
+  width: 640px;
+}
+
+.tableContainer table {
+  margin-bottom: 16px;
+}
+
+.tableContainer th:not(:last-child) {
+  width: 100%;
+}
+
+.buttons {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.buttons *:not(:last-child) {
+  margin-right: 16px;
+}
